@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-use std::net::{IpAddr, SocketAddr};
+use std::net::SocketAddr;
 use std::sync::atomic::{AtomicBool, Ordering};
 use std::sync::{Arc, Mutex};
 use std::time::Duration;
@@ -370,6 +370,38 @@ impl User {
         }
     }
 
+    fn check_client_addr(
+        &self,
+        addr: SocketAddr,
+        forbid_stats: &Arc<UserForbiddenStats>,
+    ) -> Result<(), UserAuthError> {
+        let Some(filter) = &self.ingress_net_filter else {
+            return Ok(());
+        };
+        let (_, action) = filter.check(addr.ip());
+        if action.forbid_early() {
+            forbid_stats.add_src_blocked();
+            Err(UserAuthError::BlockedSrcIp(addr))
+        } else {
+            Ok(())
+        }
+    }
+
+    pub(super) fn check_anonymous_client_addr(
+        &self,
+        addr: SocketAddr,
+    ) -> Result<(), UserAuthError> {
+        let Some(filter) = &self.ingress_net_filter else {
+            return Ok(());
+        };
+        let (_, action) = filter.check(addr.ip());
+        if action.forbid_early() {
+            Err(UserAuthError::BlockedSrcIp(addr))
+        } else {
+            Ok(())
+        }
+    }
+
     fn check_password(
         &self,
         password: &str,
@@ -557,30 +589,6 @@ impl User {
         } else {
             AclAction::Permit
         }
-    }
-
-    fn check_client_addr(
-        &self,
-        addr: SocketAddr,
-        forbid_stats: &Arc<UserForbiddenStats>,
-    ) -> AclAction {
-        if let Some(filter) = &self.ingress_net_filter {
-            let (_, action) = filter.check(addr.ip());
-            if action.forbid_early() {
-                forbid_stats.add_src_blocked();
-            }
-            action
-        } else {
-            AclAction::Permit
-        }
-    }
-
-    pub(crate) fn allow_client_ip(&self, ip: IpAddr) -> bool {
-        let Some(filter) = &self.ingress_net_filter else {
-            return true;
-        };
-        let (_, action) = filter.check(ip);
-        matches!(action, AclAction::Permit | AclAction::PermitAndLog)
     }
 
     fn check_upstream(
@@ -851,6 +859,16 @@ impl UserContext {
     }
 
     #[inline]
+    pub(crate) fn check_client_addr(&self, addr: SocketAddr) -> Result<(), UserAuthError> {
+        if self.user_type.is_anonymous() {
+            self.user.check_anonymous_client_addr(addr)
+        } else {
+            // add forbid stats for named user
+            self.user.check_client_addr(addr, &self.forbid_stats)
+        }
+    }
+
+    #[inline]
     pub(crate) fn check_password(&self, password: &str) -> Result<(), UserAuthError> {
         self.user.check_password(password, &self.forbid_stats)
     }
@@ -874,11 +892,6 @@ impl UserContext {
     #[inline]
     pub(crate) fn check_proxy_request(&self, request: ProxyRequestType) -> AclAction {
         self.user.check_proxy_request(request, &self.forbid_stats)
-    }
-
-    #[inline]
-    pub(crate) fn check_client_addr(&self, addr: SocketAddr) -> AclAction {
-        self.user.check_client_addr(addr, &self.forbid_stats)
     }
 
     #[inline]
