@@ -172,7 +172,7 @@ impl SocksProxyNegotiationTask {
         let auth_method = if let Some(user_group) = &self.user_group {
             if client_methods.contains(&SocksAuthMethod::User) {
                 SocksAuthMethod::User
-            } else if user_group.allow_anonymous(self.ctx.client_addr().ip()) {
+            } else if user_group.allow_anonymous(self.ctx.client_addr()) {
                 SocksAuthMethod::None
             } else {
                 SocksAuthMethod::User
@@ -194,9 +194,7 @@ impl SocksProxyNegotiationTask {
         let user_ctx = match auth_method {
             SocksAuthMethod::None => {
                 if let Some(user_group) = &self.user_group {
-                    if let Some((user, user_type)) =
-                        user_group.get_anonymous_user(self.ctx.client_addr().ip())
-                    {
+                    if let Some((user, user_type)) = user_group.get_anonymous_user() {
                         let user_ctx = UserContext::new(
                             None,
                             user,
@@ -204,6 +202,7 @@ impl SocksProxyNegotiationTask {
                             self.ctx.server_config.name(),
                             self.ctx.server_stats.share_extra_tags(),
                         );
+                        // no need to check user level client addr ACL here
                         user_ctx.req_stats().conn_total.add_socks();
                         Some(user_ctx)
                     } else {
@@ -216,9 +215,7 @@ impl SocksProxyNegotiationTask {
             SocksAuthMethod::User => {
                 if let Some(user_group) = &self.user_group {
                     let (username, password) = v5::auth::recv_user_from_client(&mut clt_r).await?;
-                    if let Some((user, user_type)) =
-                        user_group.get_user(username.as_original(), self.ctx.client_addr().ip())
-                    {
+                    if let Some((user, user_type)) = user_group.get_user(username.as_original()) {
                         let user_ctx = UserContext::new(
                             Some(Arc::from(username.as_original())),
                             user,
@@ -226,6 +223,11 @@ impl SocksProxyNegotiationTask {
                             self.ctx.server_config.name(),
                             self.ctx.server_stats.share_extra_tags(),
                         );
+                        if user_ctx.check_client_addr(self.ctx.client_addr()).is_err() {
+                            self.ctx.server_stats.forbidden.add_auth_failed();
+                            let _ = v5::auth::send_user_auth_failure(&mut clt_w).await;
+                            return Err(ServerTaskError::ClientAuthFailed);
+                        }
                         match user_ctx.check_password(password.as_original()) {
                             Ok(_) => {
                                 user_ctx.req_stats().conn_total.add_socks();
